# Collection.Of.Python.Utility.Tools

./: README.md  ubuntu18_04_install_python3_9.md
anaconda/: README.md
anaconda/doc/: Anaconda_Navigator启动缓慢_甚至卡住的解决方案.md  anaconda使用教程.html  conda命令大全_ 安装，更新，创建，激活，关闭，查看，卸载，删除，清理，重命名，换源，问题 - IllidanStormrage - 博客园.html  如何在 Ubuntu 20.04 上安装 Anaconda - 腾讯云开发者社区-腾讯云.html  正确打开方式——ANACONDA和jupyter安装 - 知乎.html  清理 Conda 缓存和 Pip 缓存 - 滑稽果 - 博客园.html
argparse/doc/: Python argparse.ArgumentParser.add_argument_group用法及代码示例 - 纯净天空.html
code/csv_files_merger/: .gitignore  csv_files_merger.py  csv_files_merger_test.py
code/data_file_cleaner/: data_file_cleaner.py
code/file_system_helper/: file_system_helper.py
logging/example/: log_config.py  (+4 more)
matplotlib/: README.md
miniconda/: README.md
pip3/: pip更新速度慢的解决办法.md
ply/: Python-Lex-Yacc.ipynb  README.ipynb  README.md  calclex.py  calcparse.py  mylexer.py  tokrules.py
pycuda/: nvidia-driver-upgrade.md  ubuntu18.04-python3.6-pycuda-install.md
pytest/: README.md
pytorch/: README.md
pytorch/mnist/Learning-TensorRT/: .gitignore  CMakeLists.txt  Makefile  README.md  build_by_cmake.sh  eval.py  eval.sh  image_rgb_to_gray.py  image_show.py  image_to_numpy.py  mnist_save_image.py  model.py  torch2onnx.py  train.py
pytorch/mnist/Learning-TensorRT/cmake/: FindTensorRT.cmake
pytorch/mnist/Learning-TensorRT/onnx/: CMakeLists.txt  onnx_eval.cpp  onnx_eval.sh  onnx_eval_gpu.cpp
pytorch/mnist/Learning-TensorRT/tensorrt/: MNIST.onnx  onnx2tensorrt.cu  tensorrt_eval.cu
requests/: requests_post.py
virtualenv/: README.md
(+614 files in other folders)
